Fixed issue where the text was getting too big for larger screens

--- a/style.css
+++ b/style.css
@@ -19,20 +19,60 @@
 }
 
 h1 {
+  font-size: 25.2px;
+}
+
+h2{
+    font-size: 18.72px;
+}
+#img-caption, #tribute-info {
+    font-size: 12.72px;
+}
+/* Resource derived from this article https://blog.typekit.com/2016/08/17/flexible-typography-with-css-locks/
+    Starts at a minimum and increases linearly until it reaches a maximum
+
+*/
+@media screen and (min-width: 600px) {
+  h1 {
+    font-size: calc(25.2px + 25.2 * ((100vw - 600px) / 600));
+  }
+  h2 {
+    font-size: calc(18.72px + 18.72 * ((100vw - 600px) / 600));
+  }
+  #img-caption, #tribute-info {
+      font-size: calc(12.72px + 12.72 * ((100vw - 600px) / 600));
+  }
+}
+@media screen and (min-width: 1200px) {
+  h1 {
+    font-size: 50.4px;
+  }
+  h2{
+      font-size: 37.44px;
+  }
+  #img-caption, #tribute-info {
+      font-size: 25.44px;
+  }
+
+/*
+h1 {
     font-size: 4.2vw; 
     font-style: normal;
 
 }
-
 h2 {
     font-size: 3.12vw;
 }
-
-
-
 #img-caption, #tribute-info {
     font-size: 2.12vw;
 }
+*/
+
+
+
+
+
+
 
 #img-div{
     background-color:  rgb(248, 235, 217);
